# gaze-smolvlm

./: README.md  compute_bertscore.py  experiment.py  inference.py  make_tables.py  pyproject.toml  requirements.txt  visualize_pruning.py
data/egoexo_data/annotations/: keystep_train.json.1E45c7A8  keystep_val.json.d6E2AF40  procedure_understanding_test_unannotated.json  procedure_understanding_train.json.e28b4DEC  procedure_understanding_val.json.BdEbc995  proficiency_demonstration_val.json.c2290393  proficiency_demonstrator_train.json.5cdbE8b9  proficiency_demonstrator_val.json  splits.json
data/egoexo_data/annotations/ego_pose/train/body/annotation/: 0021a226-05b9-4ca4-9e2a-cc4fae3357f3.json.3C9d5FBe
data/egoexo_data/annotations/ego_pose/train/camera_pose/: 51ef0477-cb8f-4930-90a0-1cfed839a453.json  aadfff4c-723a-4c55-b2be-be1742836ba9.json
data/egoexo_data/takes/iiith_cooking_108_5/eye_gaze/: general_eye_gaze.csv  general_eye_gaze_2d.csv  personalized_eye_gaze.csv  personalized_eye_gaze_2d.csv  summary.json
data/egoexo_data/takes/nus_cpr_27_3/eye_gaze/: general_eye_gaze.csv  general_eye_gaze_2d.csv
gaze/: __init__.py  pruner.py
results/: preliminary_experiment.csv
